# ME700-Assignment-1-Part-1

./: README.md  Tutorial2.txt  function2_file.py  pyproject.toml  solver2_file.py
.github/workflows/: prerun-tests.yml
src/newtonsmethod/: newtonsmethod_main.py  solver_functions  solver_functions.py  solver_main  solver_main.py
tests/: test_newtonsmethod.py
tutorials/: tutorial_newtonsmethod.py
